2008-03-10  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.1 ===

	* configure.in: Bump version

	* NEWS: Updates

	* glib/pcre/*: Update the internal copy of PCRE to 7.6, this time
	for real.

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

	* NEWS: Updates

	* configure.in: Bump version to 2.16.0

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslist.c: Fix a doc typo

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/giochannel.c (g_io_channle_set_encoding): Fix confusing
	error message.  (#521028, Peter Kjellerstedt)

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* tests/testglib.c: Still set the udddocs and uddpubshare 
	variables for the verbose case.

2008-03-07  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
	Look for struct statfs.f_fstypename

2008-03-07  Tor Lillqvist  <tml@novell.com>

	* README.win32: Updates.

2008-03-05  Tor Lillqvist  <tml@novell.com>

	* glib/glib.symbols: Remove g_uri_get_scheme.

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * glib/gurifuncs.c:
	Remove deprecated symbols we kept for one release.

2008-03-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.h: Add a version of G_INLINE_FUNC for
	__GNUC__ && __GNUC_STDC_INLINE__, patch by Jakub Jelinek

2008-03-03  Tor Lillqvist  <tml@novell.com>

	* glib/gspawn-win32.c (read_helper_report): Must set the GError
	also in the unexpected EOF case.
	(do_spawn_with_pipes): Must protect also new_argv[0].

2008-03-01  Benjamin Otte  <otte@gnome.org>

	* glib/glist.c:
	fix last commit.

2008-02-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslist.c: 
	* glib/glist.c: Move docs inline, and improve the 
	g_[s]list_delete_link docs.  (#519352, Owen Taylor)

2008-02-29  Tor Lillqvist  <tml@novell.com>

	* glib/win_iconv.c (name_to_codepage): Add some GNU libiconv
	compatibility: Recognize "" and "char" as aliases for the current